//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Auftrag {
  Aufnr Int [pk, increment]
  MitID String
  KunNr Int [not null]
  AufDat DateTime [not null]
  ErlDat DateTime
  Dauer Decimal
  Anfahrt Int
  Beschreibung String
  Montage Montage [not null]
  Rechnung Rechnung [not null]
}

Table Ersatzteil {
  EtID String [pk]
  EtBezeichnung String [not null]
  EtPreis Float [not null]
  EtAnzLager Int [not null]
  EtHersteller String [not null]
  Montage Montage [not null]
}

Table Gebiet {
  GebietID String [pk]
  NLNr Int
  Niederlassung Niederlassung
}

Table Kunde {
  KunNr Int [pk, increment]
  KunName String [not null]
  KunOrt String [not null]
  KunPLZ String [not null]
  KunStrasse String [not null]
  Rechnung Rechnung [not null]
}

Table Mitarbeiter {
  MitID String [pk]
  MitName String [not null]
  MitVorname String
  MitGebDat DateTime [not null]
  MitJob String [not null, default: 'Monteur']
  MitStundensatz Float
  NLNr Int
  Niederlassung Niederlassung
}

Table Montage {
  EtID String [not null]
  AufNr Int [not null]
  Anzahl Int [not null]
  Ersatzteil Ersatzteil [not null]
  Auftrag Auftrag [not null]

  indexes {
    (EtID, AufNr) [pk]
  }
}

Table Niederlassung {
  NLNr Int [pk, increment]
  Ort String
  Gebiet Gebiet [not null]
  Mitarbeiter Mitarbeiter [not null]
}

Table Rechnung {
  KunNr Int [not null]
  AufNr Int [not null]
  RechDat DateTime [not null]
  RechBetrag Float [not null]
  Kunde Kunde [not null]
  Auftrag Auftrag [not null]

  indexes {
    (KunNr, AufNr) [pk]
  }
}

Ref: Gebiet.NLNr > Niederlassung.NLNr [delete: No Action]

Ref: Mitarbeiter.NLNr > Niederlassung.NLNr [delete: No Action]

Ref: Montage.EtID > Ersatzteil.EtID

Ref: Montage.AufNr > Auftrag.Aufnr [delete: Cascade]

Ref: Rechnung.KunNr > Kunde.KunNr

Ref: Rechnung.AufNr > Auftrag.Aufnr [delete: Cascade]